--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.535.0",
+    "@aws-sdk/lib-dynamodb": "^3.535.0",
+    "aws-sdk": "^2.1580.0",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0"
