--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-dynamodb": "^3.535.0",
     "@aws-sdk/lib-dynamodb": "^3.535.0",
     "aws-sdk": "^2.1580.0",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0"
